TOPページのガワを作成

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+@use "@angular/material"as mat;
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: "M PLUS Rounded 1c", "Helvetica Neue", sans-serif;
+}
+
+// Material Designのフォントをカスタマイズ
+$myapp-typography: mat.define-typography-config($font-family: "M PLUS Rounded 1c",
+);
+@include mat.core($myapp-typography);
