TOPページにコンテンツを追加

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,76 +1,57 @@
 <div class="info-contents">
   <section class="info-section">
-    <h2>「おとカラゆうき」とは</h2>
-    <div class="desc">
-      <p>
-        「おとカラゆうき」をご利用いただきありがとうございます。<br />
-        本サービスは、アイドルマスターの楽曲に特化した、カラオケ楽曲検索サービスです。
-      </p>
-      <p>
-        ※
-        本プロジェクトは、個人で開発しているものであり、第一興商およびアイドルマスター運営とは関係ございません。
-      </p>
-    </div>
+    <h2>楽曲プレイリスト</h2>
+    <iframe class="yt-movie"
+      src=" https://www.youtube.com/embed?loop=1&listType=playlist&playlist=vctPgHMKQ-o,rxP-h-7CSPY,jxrEVf0QvqI,gW15pu80O6I,PUJpUotT-Kc"
+      title="YouTube video player" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen></iframe>
   </section>
 
   <section class="info-section">
-    <h2>対応状況</h2>
-    <div class="desc">
-      <p>
-        本サービスは、DAMでの使用を前提としており、最新機種「LIVE DAM
-        Ai」の楽曲情報を表示しています。<br />
-      </p>
-      <section class="info-subsection">
-        <h3>対応済</h3>
-        <ul>
-          <li>シンデレラガールズ</li>
-          <li>シャイニーカラーズ</li>
-          <li>ミリオンライブ</li>
-        </ul>
-      </section>
-      <section class="info-subsection">
-        <h3>未対応（今後の対応を予定しています）</h3>
-        <ul>
-          <li>765PRO ALLSTARS</li>
-          <li>SideM</li>
-        </ul>
-      </section>
-    </div>
+    <h2>デレステMVプレイリスト</h2>
+    <iframe class="yt-movie"
+      src=" https://www.youtube.com/embed?loop=1&listType=playlist&playlist=atJPNDR0Zwo,ejVvxSL18Ko,srbIobd-ekI,_-AR53Z3tXM,uZuqmwhljVo"
+      title="YouTube video player" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen></iframe>
   </section>
 
   <section class="info-section">
-    <h2>開発</h2>
-    <div class="desc">
-      <p>
-        本プロジェクトは、GitHubの
-        <a href="https://github.com/rairus00/otokara-imas" target="_blank">
-          otokara-imas</a>
-        リポジトリにて開発しています。
-        <br />
-      </p>
-    </div>
-  </section>
-
-  <section class="info-section">
-    <h2>ライセンス</h2>
-    <div class="desc">
-      <p>
-        本サービスにおけるライブに関する情報は
-        <a href="https://api.fujiwarahaji.me/doc/" target="_blank" rel="noopener">
-          ふじわらはじめAPI
+    <h2>非公式OSSプロジェクト</h2>
+    <section class="info-subsection">
+      <h3>
+        <a href="https://otokara.herokuapp.com/" target="_blank">
+          おとカラゆうき
         </a>
-        から取得し、
-        <a href="http://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">
-          クリエイティブ・コモンズ 表示 - 非営利 4.0 国際 ライセンス
-        </a>
-        に基づいて使用しています。
-        <br />
-        APIの提供元である「ふじわらはじめ」様に、心より感謝いたします。
-      </p>
-      <p>
-        その他のサードパーティライセンスについては、<a href="/3rdpartylicenses.txt" target="_blank">こちら</a>
-        をご覧ください。
-      </p>
-    </div>
+      </h3>
+      <div class="desc">
+        <p>
+          アイドルマスターの楽曲に特化したカラオケ楽曲検索サービスです。<br>
+          DAMで歌えるアイマス楽曲を新着順で確認したり、ライブ公演のセトリ順に表示できます。<br>
+          「カラオケに来たはいいけど何を歌おう？」「どのアイマス曲が入ってるかわからない」とお悩みのPさんはぜひご活用ください。
+        </p>
+      </div>
+    </section>
+    <section class="info-subsection">
+      <h3>
+        otokura.run (当サイト)
+      </h3>
+      <div class="desc">
+        <p>
+          本プロジェクトは、GitHubの
+          <a href="https://github.com/otokurarun/otokura-run" target="_blank">
+            otokura.run
+          </a>
+          リポジトリにて開発しています。<br>
+          サードパーティライセンスについては、<a href="/3rdpartylicenses.txt" target="_blank">こちら</a>
+          をご覧ください。
+        </p>
+      </div>
+    </section>
   </section>
+
+  <footer>
+    当サイトは個人で開発しているものであり、バンダイナムコエンターテインメント様、Cygames様、バンダイナムコスタジオ様とは一切関係ありません。
+  </footer>
 </div>
