--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,10 @@
 .toolbar {
   background-color: white;
 
+  @media screen and (max-width:599px) {
+    margin-top: 30px;
+  }
+
   a {
     transition: all 0.3s ease-in-out;
 
@@ -17,7 +21,6 @@
 
     @media screen and (max-width: 599px) {
       font-size: 1.5rem;
-      padding-left: 30px;
     }
 
     .logo-link {
@@ -41,7 +44,7 @@
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 900px;
   padding: 0 20px 70px;
   margin: 30px auto 0;
 }
