--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -2,11 +2,17 @@
   margin-top: 70px;
 
   @media screen and (max-width: 599px) {
-    margin-top: 50px;
+    margin-top: 40px;
+    margin-bottom: 50px;
   }
 
   .info-subsection {
     margin-top: 30px;
+  }
+
+  .yt-movie {
+    width: 100%;
+    aspect-ratio: 16 / 9;
   }
 
   h2 {
@@ -52,4 +58,8 @@
       line-height: 2;
     }
   }
+}
+
+footer {
+  margin-top: 30px;
 }
