ページ内の文言とdescriptionタグを微修正

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <h1 class="toolbar-title">
     <a routerLink="" class="logo-link">
       otokura.run
-      <span class="toolbar-title-small"> 乙倉悠貴ファンのサイト </span>
+      <span class="toolbar-title-small"> 乙倉悠貴のファンサイト </span>
     </a>
   </h1>
 </mat-toolbar>
