--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -37,7 +37,7 @@
         <p>
           本プロジェクトは、GitHubの
           <a href="https://github.com/otokurarun/otokura-run" target="_blank">
-            otokura.run
+            otokura-run
           </a>
           リポジトリにて開発しています。<br>
           サードパーティライセンスについては、<a href="/3rdpartylicenses.txt" target="_blank">こちら</a>
