--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="info-contents">
   <section class="info-section">
-    <h2>お知らせ</h2>
+    <h2>NEWS</h2>
     <app-articles></app-articles>
   </section>
 
