--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -18,6 +18,7 @@
   h2 {
     font-size: 1.8rem;
     font-weight: bold;
+    letter-spacing: 0.1rem;
 
     @media screen and (max-width: 599px) {
       font-size: 1.4rem;
