--- a/src/app/blog/article-detail/article-detail.component.scss
+++ b/src/app/blog/article-detail/article-detail.component.scss
@@ -19,6 +19,7 @@
     margin: 20px 0 70px;
     padding: 0 5px 10px;
     border-bottom: solid 2px #DBDBDB;
+    letter-spacing: 0.1rem;
 
     @media screen and (max-width: 599px) {
       font-size: 1.4rem;
@@ -48,16 +49,35 @@
   }
 
   p {
-    margin: 0;
     font-size: 1rem;
     line-height: 1.7;
 
     &+p {
-      margin-top: 20px;
+      margin-top: 30px;
+    }
+  }
+
+  ul {
+    margin: 30px 0;
+
+    li {
+      font-size: 1rem;
+    }
+
+    li+li {
+      margin-top: 10px;
     }
   }
 
   img {
+    display: block;
+    max-width: 400px;
     width: 100%;
+    margin: 0 auto 70px;
+
+    @media screen and (max-width: 599px) {
+      max-width: 250px;
+      margin-bottom: 50px;
+    }
   }
 }
