--- a/src/app/blog/articles/articles.component.scss
+++ b/src/app/blog/articles/articles.component.scss
@@ -1,9 +1,15 @@
 .articles {
   display: flex;
-  flex-wrap: wrap;
   gap: 20px;
+  flex-wrap: wrap;
+  height: 280px;
+
+  @media screen and (max-width:599px) {
+    height: auto;
+  }
 
   .article-card {
+    height: 100%;
     width: calc((100% - (20px * 2)) / 3);
     padding: 20px;
     border: 1px solid #ccc;
@@ -13,9 +19,11 @@
     text-decoration: none;
     color: #333;
     transition: all 0.1s ease-in-out;
+    box-sizing: border-box;
 
     @media screen and (max-width:599px) {
       width: 100%;
+      height: auto;
     }
 
     &:hover {
@@ -23,18 +31,29 @@
     }
 
     .article-img {
+      aspect-ratio: 16/9;
+
       img {
         width: 100%;
+        height: 100%;
+        object-fit: contain;
       }
     }
 
-    .article-title {
-      margin-top: 10px;
-      font-size: 18px;
-    }
+    .article-caption {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      margin-top: 20px;
 
-    .article-date {
-      margin-top: 5px;
+      .article-title {
+        font-size: 16px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        margin-top: 10px;
+      }
     }
   }
 }
