chore: 記事一覧画面とTOPページで記事の表示件数を変更するための下地

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <div class="info-contents">
   <section class="info-section">
     <h2>NEWS</h2>
-    <app-articles></app-articles>
+    <app-articles [numOfMaxArticles]="3"></app-articles>
   </section>
 
   <section class="info-section">
