--- a/src/app/blog/articles/articles.component.html
+++ b/src/app/blog/articles/articles.component.html
@@ -1,5 +1,5 @@
 <div class="articles">
-  <ng-container *ngFor="let page of pages">
+  <ng-container *ngFor="let page of pages | slice : 0 : numOfMaxArticles">
     <a [href]="page.route" class="article-card">
       <div class="article-img">
         <img *ngIf="page['imageUrls'] && page['imageUrls'].length >= 1" [src]="page['imageUrls'][0]">
