chore: ニュース記事画像のサイズ変更

--- a/src/app/blog/article-detail/article-detail.component.scss
+++ b/src/app/blog/article-detail/article-detail.component.scss
@@ -79,7 +79,8 @@
     margin: 0 auto 70px;
 
     @media screen and (max-width: 599px) {
-      max-width: 250px;
+      max-width: auto;
+      max-height: 250px;
       margin-bottom: 50px;
     }
   }
