--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -15,6 +15,27 @@
     aspect-ratio: 16 / 9;
   }
 
+  .show-more-link {
+    display: block;
+    margin: 30px auto 0;
+    width: 100%;
+    border-radius: 4px;
+    font-size: 1.4em;
+    border: 1px solid #ccc;
+    padding: 3px 0;
+
+    &:hover {
+      opacity: 0.6;
+      transition: all 0.3s ease-in-out;
+    }
+
+    @media screen and (max-width: 599px) {
+      padding: 5px 0;
+      font-size: 1.2em;
+      margin-top: 20px;
+    }
+  }
+
   h2 {
     font-size: 1.8rem;
     font-weight: bold;
